# IoT-farms-at-Electric-Boy-101

./: README.md
famer_demo/: BH1750.c  BH1750.h  BUILD.gn  E53_IA1.c  E53_IA1.h  SGP30.c  SGP30.h  aht20.c  aht20.h  famer_control.c  motor.c  motor.h  oled_fonts.h  oled_ssd1306.c  oled_ssd1306.h  sg92r.c  sg92r.h  wifi_connect.h
