#Copyright (C) 2021 HiHope Open Source Organization .
#Licensed under the Apache License, Version 2.0 (the "License");
#you may not use this file except in compliance with the License.
#You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
#Unless required by applicable law or agreed to in writing, software
#distributed under the License is distributed on an "AS IS" BASIS,
#WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#See the License for the specific language governing permissions and
#
#limitations under the License.

config_file = [ "//vendor/bearpi/bearpi_hm_nano/common/third_party/libs/libiot_link.a" ]
copy("config") {
  sources = config_file
  outputs = [ "//out/hispark_pegasus/wifiiot_hispark_pegasus/libs/{{source_file_part}}" ]
}
static_library("famer_control") {
    sources = [
       "famer_control.c",
       "oled_ssd1306.c",
       "aht20.c",
       "SGP30.c",
       "sg92r.c",
       "BH1750.c",
       "motor.c",
       "hal_iot_gpio_ex.c",
       "E53_IA1.c",
       "wifi_connect.c"
    ]

    include_dirs = [
        "./",
        "//device/hisilicon/hispark_pegasus/sdk_liteos",
        "//utils/native/lite/include",
        "//base/iot_hardware/peripheral/interfaces/kits",
        "//device/hisilicon/hispark_pegasus/hi3861_adapter/kal/cmsis",
        "//applications/sample/wifi_iot/app",
        "//kernel/liteos_m/kal/cmsis",
        "//vendor/bearpi/bearpi_hm_nano/common/iot_hardware_hals/include",
        "//foundation/communication/wifi_lite/interfaces/wifiservice",
        "//third_party/cJSON",
        "//vendor/bearpi/bearpi_hm_nano/common/third_party/iot_link/oc_mqtt/oc_mqtt_al",
        "//vendor/bearpi/bearpi_hm_nano/common/third_party/iot_link/oc_mqtt/oc_mqtt_profile_v5",
        "//vendor/bearpi/bearpi_hm_nano/common/third_party/iot_link/inc",
        "include",
    ]           
    deps = [ ":config" ]
  deps += [ "//vendor/bearpi/bearpi_hm_nano/common/iot_hardware_hals:bearpi_iot_hardware_hals" ]                                                      
}